--- a/src/i18n/vi/models.json
+++ b/src/i18n/vi/models.json
@@ -1,8 +1,9 @@
 {
-    "USER": "Người dùng",
-    "ROLE": "Vai trò",
-    "STATUS": "Trạng thái",
-    "PERMISSION": "Permission",
-    "MENU": "Menu",
-    "STORE": "Cửa hàng"
+  "USER": "Người dùng",
+  "ROLE": "Vai trò",
+  "STATUS": "Trạng thái",
+  "PERMISSION": "Permission",
+  "MENU": "Menu",
+  "STORE": "Cửa hàng",
+  "CAMPAIGN": "Chiến dịch"
 }
