--- a/src/i18n/en/models.json
+++ b/src/i18n/en/models.json
@@ -5,5 +5,6 @@
   "PERMISSION": "Permission",
   "STATUS": "Status",
   "STORE": "Store",
-  "CAMPAIGN": "Campaign"
+  "CAMPAIGN": "Campaign",
+  "VOUCHER": "Voucher"
 }
