--- a/src/i18n/vi/models.json
+++ b/src/i18n/vi/models.json
@@ -5,5 +5,6 @@
   "PERMISSION": "Permission",
   "MENU": "Menu",
   "STORE": "Cửa hàng",
-  "CAMPAIGN": "Chiến dịch"
+  "CAMPAIGN": "Chiến dịch",
+  "VOUCHER": "Voucher"
 }
